        <resources>
    <string name="app_name">RoomRent</string>
    <string name="map_key">AIzaSyCXdApG8xQmpvcGUnY0XqrR1fugcI7D_vc</string>

    <string-array name="post_type">
        <item>Ask</item>
        <item>Offer</item>
    </string-array>

    <!-- New post -->
    <string name="new_post_add_new_adress">Add Address</string>
    <string name="new_post_title">Title</string>
    <string name="new_post_description">Description</string>
    <string name="new_post_no_of_room">No. of Room</string>
    <string name="new_post_price">Price</string>
    <string name="new_post_success_title">Success</string>
    <string name="new_post_success_msg">Your post was succesfully recorded.</string>

    <!-- Validators Strings-->
    <string name="validator_email">The e-mail address is not in a valid format.</string>
    <string name="validator_empty">You must complete this field.</string>
    <string name="validator_url">The URL entered is incorrect.</string>
    <string name="validator_confirm">Passwords do not match.</string>
    <string name="validator_phone">Phone number is not in a valid format.</string>
    <string name="validator_range">The value is not between the required range.</string>
    <string name="validator_date">The entered date is not valid.</string>
    <string name="validator_num">Inputed text contains something that isn\'t numeric.</string>
    <string name="validator_pass">The password must contain at least minimum 8 characters, 1 uppercase letter, 1 lowercase
        letter and 1 number.</string>
    <string name="validator_username">
        Usernames can contain characters a-z, 0-9, underscores and periods.
        The username cannot start with a period nor end with a period.
        It must also not have more than one period sequentially.
        Max length is 30 chars.</string>

    <string name="validator_minimum">Minimum required number of character: </string>
    <string name="validator_minimium_email_character">5</string>
    <string name="validator_minimium_user_name_character">3</string>
    <string name="validator_minimium_password_character">8</string>
    <string name="validator_minimium_phone_character">10</string>

    <!-- for sign up -->
    <string name="sign_up_verification_required">Verification Required</string>
    <string name="sign_up_verification_link">We have sent a verification link to your email address.
        Please check your inbox and complete the registration process."</string>
    <string name="pick_image_intent_text">Select Image</string>

    <!-- Common data -->
    <string name="name">Name</string>
    <string name="email">Email Address</string>
    <string name="email_username">Email or Username</string>
    <string name="phone">Phone No.</string>
    <string name="password">Password</string>
    <string name="confirm_password">Re-type Password</string>
    <string name="new_account">New Account</string>
    <string name="user_name">Username</string>
    <string name="create">Create</string>
    <string name="profile">Profile</string>
    <string name="try_again">Please Try Again</string>
    <string name="error">Error</string>
    <string name="progress">Progress</string>
    <string name="sending_data"> Sending Data...</string>
    <string name="post">POST</string>
    <string name="location">Location</string>
    <string name="filter">Filter</string>
    <string name="add">Add New</string>
    <string name="image">Image</string>

    <!-- Values for Home LoginResponse Screen-->
    <string name="home_home">HOME</string>
    <string name="home_sign_in">Sign In</string>
    <string name="home_sign_up"> Don\'t have an account? <b> Sign Up </b></string>

    <!-- Values for Forget Password Screen-->
    <string name="forget_title">Forgot Password</string>
    <string name="forget_button_msg">Send Password</string>
    <string name="reset_password_link">Reset Password Link</string>


    <!-- Values relating Network -->
    <string name="network_internet_connectivity">Please check your internet connection.</string>
    <string name="server_error_title">Server Error</string>
    <string name="unauthorized_error_tile">Unauthorized Error</string>
    <string name="no_internet_connection_title">No internet Connection</string>
    <string name="no_internet_connection_message">It appears that you do not have an active internet connection.
    Please turn it on and try again. </string>
    <string name="network_error_title">Network Error</string>
    <string name="fatal_error_title">Fatal Error</string>
    <string name="client_error_title">Client Error</string>
    <string name="unexpected_response">Unexpected response </string>
    <string name="error_msg">Sorry! Couldn\'t Fetch New Post At the Moment.</string>
    <string name="tap_to_reload">Tap to reload</string>
    <string name="btn_retry">Retry</string>
    <string name="error_msg_timeout">The server took too long to respond</string>
    <string name="error_msg_unknown">An unexpected error occurred</string>


    <!-- Profile Page -->
    <string name="profile_log_out">Log out</string>
    <string name="title_activity_navigation">Navigation</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_home_screen">HomeScreen</string>
    <string name="title_activity_maps">Map</string>

</resources>
