<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/FieldGroup"
            android:layout_width="wrap_content"
            android:layout_marginBottom="@dimen/forget_title_button_margin"
            android:layout_marginTop="@dimen/forget_title_top_margin"
            android:text="@string/forget_title"
            android:textSize="@dimen/title"
            android:textStyle="italic|bold"/>

        <android.support.design.widget.TextInputLayout
            style="@style/FieldGroup"
                android:layout_width="match_parent"
            android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/email"
                    style="@style/PrimaryColor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="@dimen/home_edit_text_icons_padding"
                    android:drawableStart="@drawable/ic_email"
                    android:hint="@string/email"
                    android:imeOptions="actionDone"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:nextFocusDown="@+id/sendMessage" />

        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/sendMessage"
            style="@style/FieldGroup"
            android:layout_marginTop="@dimen/button_top_margin"
            android:background="@color/colorAccent"
            android:onClick="sendPassword"
            android:text="@string/forget_button_msg"
            android:textAllCaps="false"
            />

    </LinearLayout>

</ScrollView>
